--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="edu-me">
           <h2 style=" font-family: 'Cormorant SC', serif;font-size: 40px">College</h2>
-          <h2>Vikasa PU College(8-10th) 2020</h2>
+          <h2>Vikasa PU College(PUC) 2020</h2>
           <h4>Alkola, Shivamogga</h4>
         </div>
         <div class="edu-me">
